# occlusionRectangles2Dcpp

./: CMakeLists.txt  Point.cpp  Point.h  README.md  Rectangle.cpp  Rectangle.h  Timer.h  generalUtils.h  main.cpp  mathUtils.h  occlusionRays.ipynb  sortUtils.h
